--- a/testmode.css
+++ b/testmode.css
@@ -64,14 +64,23 @@
 
 
 .dropdown-menu {
-        width: 100%;
-    position: relative;
-    background: #fb981e;
-    border-color: transparent;
-    border-width: 2px;
-    border-radius: 10px;
-    margin-bottom: 4px;
-    padding: 5px;
+        position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 10rem;
+    padding: .5rem 0;
+    margin: .125rem 0 0;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: .25rem
 }
 body.dark #serviceItem, body.dark #categoryItem {
     background: #13151e;
