--- a/testmode.css
+++ b/testmode.css
@@ -66,10 +66,10 @@
 .dropdown-menu {
     width: 100%;
     padding: 0;
-    max-height: 30.vh;
+    max-height: 38vh;
     overflow-y: scroll;
     border: none!important;
-    margin-top: 10px;
+    margin-top: 12px;
 }
 body.dark #serviceItem, body.dark #categoryItem {
     background: #13151e;
