--- a/testmode.css
+++ b/testmode.css
@@ -63,13 +63,25 @@
 
 
 
+
+  
+
+
+
+
+
+
+
+
 .dropdown-menu {
     width: 100%;
-    padding: 0;
-    max-height: 38vh;
+    padding: 5;
+    max-height: 30.vh;
+    overflow: hidden;
     overflow-y: scroll;
-    border: none!important;
-    margin-top: 12px;
+    border-width: 2px;
+    border-radius: 10px;
+    margin-top: 4px;
 }
 body.dark #serviceItem, body.dark #categoryItem {
     background: #13151e;
