--- a/testmode.css
+++ b/testmode.css
@@ -66,7 +66,8 @@
 
   
 
-
+    height: 415px;
+    
 
 
 
@@ -76,9 +77,9 @@
 .dropdown-menu {
     width: 100%;
     padding: 5;
-    max-height: 30.vh;
-    overflow: hidden;
-    overflow-y: scroll;
+    max-height: 415ph;
+    overflow: auto;
+   
     border-width: 2px;
     border-radius: 10px;
     margin-top: 4px;
