--- a/testmode.css
+++ b/testmode.css
@@ -32,6 +32,55 @@
 
 
 
+@media (max-width: 767.98px){
+.old-payments .op-title {
+    font-size: 15px;
+}}
+
+.old-payments .op-title {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    color: #ffffff;
+}
+ .old-payments .op-date {
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 23px;
+    color: #ffffff;
+    margin-top: 10px;
+}   
+@media (max-width: 767.98px){
+.old-payments .op-status {
+    text-align: center;
+    margin-top: 10px;
+}}
+.old-payments .op-status {
+    border-color: #28cb69;
+    background: #28cb69;
+    color: #fff;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border-radius: 7.54902px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    padding: 10px 25px;
+}
+.old-payments .op-id {
+    border-color: #28cb69;
+    background: #28cb69;
+    color: #fff;
+    border-radius: 5px;
+    padding: 5px 15px;
+    min-width: 75px;
+    text-align: center;
+}
+
+body.dark .form-group .form-control, body.dark .panel-body {
+    background: #13151e;
+    color: #FFFFFF;
+}
 
 
 
@@ -39,6 +88,228 @@
 
 
 
+
+
+.dropdown .fab.fa-instagram {
+	background: #ffffff26;
+	background: -moz-linear-gradient(45deg, #FD1D1D 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+	background: -webkit-linear-gradient(45deg, #fd1d1d00 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+	background: linear-gradient(45deg, #fd1d1d00 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FD1D1D', endColorstr='#bc1888', GradientType=1);
+	background-clip: text;
+	font-size: 14px;
+	padding: 2.4px;
+	border-radius: 5px;
+	color: white;
+	font-weight: lighter;
+	margin-right: 10px;
+}
+
+.dropdown .fab.fa-facebook-square {
+	background: #207eff;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 18px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	border-radius: 5px;
+	margin-right: 5px;
+}
+
+.dropdown .fab.fa-youtube {
+	background: #ff0042;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+.dropdown .fab.fa-twitter {
+	background: #1da1f2;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+.dropdown .fab.fa-telegram-plane {
+	background: #0088cc;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+.dropdown .fab.fa-soundcloud {
+	background: #ff7700;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+.dropdown .fab.fa-spotify {
+	background: #1DB954;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+.dropdown .fab.fa-twitch {
+	background: #e600ff;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+.dropdown .fab.fa-pinterest-p {
+	background: #ff5858;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+.dropdown .fa.fa-music {
+	background: #f8004d;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+.dropdown .fab.fa-tiktok {
+	background: black;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+.dropdown .fas.fa-globe {
+	background: #1a1a1a;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+.dropdown .fas.fa-stream {
+	background: #ccc;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+.dropdown .fab.fa-hotjar {
+	background: #ff0000;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+.dropdown .fab.fa-linkedin {
+	background: #0077b5;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+
+.dropdown .fab.fa-apple {
+	background: #000000;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+.dropdown .fas.fa-check-circle {
+	background: green;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+
+.dropdown .fas.fa-dot-circle {
+	background: red;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+
+.dropdown .fab.fa-reddit-square {
+	background: red;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+
+.dropdown .fab.fa-whatsapp {
+	background: red;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
+
+
+.dropdown .fas.fa-crown {
+	background: red;
+	background-clip: text;
+	-webkit-background-clip: text;
+	font-size: 17px;
+	-webkit-text-fill-color: transparent;
+	font-weight: bold;
+	margin-right: 5px;
+}
 
 
 
@@ -55,26 +326,15 @@
 }
 }
 #categoryTitle, #serviceTitle {
-    width: 100%;
+    width: 90%;
     overflow: hidden;
     position: static;
-    height: 10px;
+    height: 20px;
 }
 
 
 
-
-  
-
-    height: 415px;
-    
-
-
-
-
-
-
-.dropdown-menu {
+..dropdown-menu {
     width: 100%;
     padding: 5;
     max-height: 415ph;
@@ -216,8 +476,8 @@ body.dark #serviceItem, body.dark #categoryItem {
 
 
 #categoryTitle, #serviceTitle {
-    width: 100%;
+    width: 90%;
     overflow: hidden;
     position: absolute;
-    height: 10px;
+    height: 22px;
 }
